feat: use un labels and fix build error

--- a/assets/aerialstyle.yml
+++ b/assets/aerialstyle.yml
@@ -123,8 +123,9 @@ layers:
   - !!inc/file layers/place_suburbs.yml
   - !!inc/file layers/place_villages.yml
   - !!inc/file layers/place_town.yml
-  - !!inc/file layers/place_country_2.yml
-  - !!inc/file layers/place_country_1.yml
+  # carto country labels
+  #  - !!inc/file layers/place_country_2.yml
+  #  - !!inc/file layers/place_country_1.yml
   - !!inc/file layers/place_state.yml
   - !!inc/file layers/place_continent.yml
   - !!inc/file layers/place_city_r6.yml
@@ -141,5 +142,48 @@ layers:
   - !!inc/file layers/roadname_pri.yml
   - !!inc/file layers/roadname_major.yml
   - !!inc/file layers/housenumber.yml
+
+
+  # UN admin labels
+  - !!inc/file un_street_map/Labels/LAB_Water_S/label/Ocean.yml
+  - !!inc/file un_street_map/Labels/LAB_Water_M/label/Ocean.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin4_MMR/label/Class 1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_MMR/label/Class 1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_VMC/label/Municipality.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin3_MIK/label/Municipality.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin2_NoHQ/label/Admin2.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin2_HQ/label/Admin2.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin1_NoHQ/label/Admin1.yml
+  - !!inc/file un_street_map/Labels/LAB_Admin1_HQ/label/Admin1.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L03_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L04_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/China.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L05_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Autonomies.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Territory_SG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/China.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/Territory_NSG.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_S.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_M.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L06_P/label/State_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Autonomous_L.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/Territory.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/MiddleEast.yml
+  - !!inc/file un_street_map/Labels/LAB_Country_L/label/State.yml
+
 id: aerial
 owner: UNDP
